--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>welcome to my github account</h1>
+    <p>sameer kumar singh is a marvel hero and a karmveer thakur</p>
 </body>
 </html>
